Add multichain support

--- a/components/layout/Header.module.sass
+++ b/components/layout/Header.module.sass
@@ -13,14 +13,19 @@
     .imgs 
         flex: 1
 
-    .pages
-        flex: 3
-        display: flex
-        justify-content: space-evenly
-        .page
-            font-size: 0.8em
-            margin: 10px
-            color: $colorLightGrey            
+    // .pages
+    //     flex: 3
+    //     display: flex
+    //     justify-content: space-evenly
+    //     .page
+    //         font-size: 0.8em
+    //         margin: 10px
+    //         color: $colorLightGrey        
+    .userInfo
+        flex: 1   
+    
+    .selectChain
+        flex: 1
 
     .buttons 
         flex:1
