--- a/components/layout/Header.module.sass
+++ b/components/layout/Header.module.sass
@@ -28,7 +28,7 @@
         justify-content: flex-end
         & .button
             border: #f56a00 1px solid
-            background-color: $base
+            background-color: black
             color: white
             &:hover
                 background-color: white
