--- a/components/layout/Layout.module.sass
+++ b/components/layout/Layout.module.sass
@@ -22,7 +22,7 @@
     background-attachment: fixed
     background-repeat: no-repeat
     background-position: center
-    background-color: $base
+    background-color: black
     color: white
     line-height: 25px
 
