--- a/styles/custom.less
+++ b/styles/custom.less
@@ -1,4 +1,8 @@
 @import '~antd/lib/style/themes/default.less';
 @import '~antd/dist/antd.less'; // Import Ant Design styles
 
-@primary-color: green; // change antd primary-color
+@primary-color: rgb(48, 151, 103); // change antd primary-color
+@link-color: #2f7234; // link color
+
+@font-size-base: 20px; // major text font size
+@border-radius-base: 10px; // major border radius
