--- a/styles/custom.less
+++ b/styles/custom.less
@@ -1,8 +1,8 @@
 @import '~antd/lib/style/themes/default.less';
 @import '~antd/dist/antd.less'; // Import Ant Design styles
 
-@primary-color: rgb(48, 151, 103); // change antd primary-color
-@link-color: #2f7234; // link color
+@primary-color: #8d531d; // change antd primary-color
+// @link-color: #8d4f1d; // link color
 
-@font-size-base: 20px; // major text font size
-@border-radius-base: 10px; // major border radius
+// @font-size-base: 20px; // major text font size
+// @border-radius-base: 10px; // major border radius
